--- a/index.html
+++ b/index.html
@@ -8,9 +8,51 @@
     <title>Document</title>
 </head>
 <body>
-<ul>
+<!--DOM-->
+<!--1-->
+<!--<button>Click me</button>-->
+<!--<span>some text</span>-->
 
-</ul>
+<!--2-->
+<!--<button>click me</button>-->
+<!--<span>some text</span>-->
+
+<!--3-->
+<!--<button>Click me</button>-->
+<!--<h2>Заголовок, не поменяется.</h2>-->
+<!--<p>Абзац, поменяется.</p>-->
+<!--<p>Абзац, поменяется.</p>-->
+<!--<p>Абзац, поменяется.</p>-->
+
+<!--4-->
+<!--<button>Click me</button>-->
+<!--<input type="text"/>-->
+<!--<p id="result"></p>-->
+
+<!--5-->
+<!--<button>Click me</button>-->
+<!--<input type="text"/>-->
+<!--<p id="result"></p>-->
+
+<!--6-->
+<!--<button>Click me</button>-->
+<!--<input type="text" id="input1">-->
+<!--<input type="text" id="input2">-->
+
+
+<!--7-->
+<!--<input type="button" value="click me">-->
+
+<!--8-->
+<!--<button>Click me</button>-->
+<!--<input type="text">-->
+
+<!--9-->
+<!--<button>Блокировать</button>-->
+<!--<button>Заблокировать</button>-->
+<!--<input type="text">-->
+
+
 <script src="script.js"></script>
 </body>
 </html>
