--- a/index.html
+++ b/index.html
@@ -52,6 +52,67 @@
 <!--<button>Заблокировать</button>-->
 <!--<input type="text">-->
 
+<!--10-->
+<!--<div id="test"></div>-->
+
+<!--11-->
+<!--<div class="test"></div>-->
+
+<!--12-->
+<!--<div id="result" class="test1 test2"></div>-->
+
+
+
+
+
+
+
+
+
+
+
+
+<!--Interval and Timer-->
+
+<!--1-->
+<!--<button>Click me</button>-->
+<!--<p id="result">0</p>-->
+
+<!--2-->
+<!--<input type="button" id="run" value="'Run">-->
+<!--<input type="Button" id="stop" value="Stop" disabled>-->
+<!--<p id="result">0</p>-->
+
+<!--3-->
+<!--<p id="result"></p>-->
+
+<!--4-->
+<!--<p id="result"></p>-->
+<!--<button>Start</button>-->
+
+<!--5-->
+<!--<img src="" alt="">-->
+
+<!--6-->
+<!--<img src="" alt="">-->
+<!--<img src="" alt="">-->
+<!--<img src="" alt="">-->
+<!--<button>Go</button>-->
+<!--<button id="stop">Stop</button>-->
+
+<!--7-->
+<!--<table>-->
+    <!--<tr>-->
+        <!--<td>hours</td>-->
+        <!--<td>minuts</td>-->
+        <!--<td>seconds</td>-->
+    <!--</tr>-->
+    <!--<tr id="time">-->
+        <!--<td id="hours"></td>-->
+        <!--<td id="minuts"></td>-->
+        <!--<td id="seconds"></td>-->
+    <!--</tr>-->
+<!--</table>-->
 
 <script src="script.js"></script>
 </body>
