--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 <!--<input type="text" id="input1">-->
 <!--<input type="text" id="input2">-->
 
-
 <!--7-->
 <!--<input type="button" value="click me">-->
 
@@ -61,12 +60,190 @@
 <!--12-->
 <!--<div id="result" class="test1 test2"></div>-->
 
+<!--13-->
+<!--<div class="test1 test2"></div>-->
 
+<!--14-->
+<!--<div>resilt</div>-->
 
+<!--15-->
+<!--<div>test</div>-->
 
+<!--16-->
+<!--<div>test</div>-->
 
+<!--17-->
+<!--<div class="www">test1</div>-->
+<!--<p class="www">test1</p>-->
+<!--<span class="www">test1</span>-->
 
+<!--18-->
+<!--<ol>-->
+    <!--<li>test</li>-->
+    <!--<li>test 2</li>-->
+<!--</ol>-->
 
+<!--19-->
+<!--<ul></ul>-->
+
+<!--21-->
+<!--<div>-->
+    <!--<p>test 1</p>-->
+<!--</div>-->
+
+<!--22-->
+<!--<div>-->
+    <!--<p>test 1</p>-->
+<!--</div>-->
+
+<!--23-->
+<!--<ul>-->
+    <!--<li>1</li>-->
+    <!--<li>2</li>-->
+    <!--<li>3</li>-->
+<!--</ul>-->
+
+<!--24-->
+<!--<ul>-->
+    <!--<li>1</li>-->
+    <!--<li>2</li>-->
+    <!--<li>3</li>-->
+<!--</ul>-->
+
+<!--25-->
+<!--<ul>-->
+    <!--<li>1</li>-->
+    <!--<li>2</li>-->
+    <!--<li>3</li>-->
+<!--</ul>-->
+
+<!--26-->
+<!--<ul>-->
+    <!--<li>1</li>-->
+    <!--<li>2</li>-->
+    <!--<li>3</li>-->
+<!--</ul>-->
+
+<!--27-->
+<!--<ul>-->
+    <!--<li>1</li>-->
+    <!--<li>2</li>-->
+    <!--<li>3</li>-->
+<!--</ul>-->
+
+<!--28-->
+<!--<ul>-->
+    <!--<li>1</li>-->
+    <!--<li>2</li>-->
+    <!--<li>3</li>-->
+<!--</ul>-->
+
+<!--29-->
+<!--<div>-->
+    <!--<br>-->
+    <!--<p>test</p>-->
+    <!--<br>-->
+<!--</div>-->
+
+<!--30-->
+<!--<ul>-->
+    <!--<li>1</li>-->
+    <!--<li>2</li>-->
+    <!--<li>3</li>-->
+<!--</ul>-->
+
+<!--31-->
+<!--<ul>-->
+    <!--<li>1</li>-->
+    <!--<li>2</li>-->
+    <!--<li>3</li>-->
+<!--</ul>-->
+<!--<button>click me</button>-->
+
+<!--32-->
+<!--<div id="parent">-->
+    <!--<div class="elem">-->
+        <!--<p>1</p>-->
+        <!--<p>2</p>-->
+    <!--</div>-->
+<!--</div>-->
+
+<!--33-->
+<!--<div>-->
+    <!--<ul>-->
+        <!--<li>1</li>-->
+    <!--</ul>-->
+<!--</div>-->
+
+<!--34-->
+<!--<div style="border: 2px; height: 100px">-->
+<!--</div>-->
+
+<!--35-->
+<!--<div style="border: 1px solid black">-->
+    <!--test-->
+<!--</div>-->
+
+<!--36-->
+<!--<div style="padding: 10px; border:1px solid black">-->
+    <!--test-->
+<!--</div>-->
+
+<!--37-->
+<!--<div>-->
+    <!--test-->
+<!--</div>-->
+
+<!--38-->
+<!--<button style="position:fixed; top: 0; left: 100px">click me</button>-->
+<!--<p style="height: 2000px">lorem</p>-->
+
+<!--39-->
+<!--<div style="width:2000px">-->
+    <!--test-->
+<!--</div>-->
+<!--<button style="position:fixed; left:20px; top: 200px">Click me</button>-->
+
+<!--40-->
+<!--<div>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+    <!--<p>lorem</p>-->
+<!--</div>-->
+<!--<button style="position: fixed; top:10px; left: 100px">Click me</button>-->
+
+<!--41-->
+<!--<button style="position: fixed">click me</button>-->
+
+<!--42-->
+<!--<button>click me</button>-->
+<!--<p style="margin-top: 1000px">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, itaque?</p>-->
+
+<!--43-->
+<!--<button style="position: fixed">Click me</button>-->
 
 
 
