--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <!--DOM-->
@@ -291,6 +292,33 @@
     <!--</tr>-->
 <!--</table>-->
 
-<script src="script.js"></script>
+
+
+<!--практические задачи-->
+<!--1-->
+<!--<div id="calculator">-->
+    <!--<input type="text" disabled>-->
+    <!--<div data-type="c" class="c button">C</div>-->
+    <!--<div data-type="7" class="button">7</div>-->
+    <!--<div data-type="8" class="button">8</div>-->
+    <!--<div data-type="9" class="button">9</div>-->
+    <!--<div data-type="/" class="button">/</div>-->
+    <!--<div data-type="4" class="button">4</div>-->
+    <!--<div data-type="5" class="button">5</div>-->
+    <!--<div data-type="6" class="button">6</div>-->
+    <!--<div data-type="*" class="button">*</div>-->
+    <!--<div data-type="1" class="button">1</div>-->
+    <!--<div data-type="2" class="button">2</div>-->
+    <!--<div data-type="3" class="button">3</div>-->
+    <!--<div data-type="-" class="button">-</div>-->
+    <!--<div data-type="0" class="button">0</div>-->
+    <!--<div data-type="." class="button">.</div>-->
+    <!--<div data-type="=" class="button">=</div>-->
+    <!--<div data-type="+" class="button">+</div>-->
+    <!--<div class="clearfix"></div>-->
+<!--</div>-->
+<!--<div class="clearfix"></div>-->
+
+<script src="dist/script.js"></script>
 </body>
 </html>
